Bug 397203 - Gradients don't save or update
Summary: Gradients don't save or update
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Resource Management (other bugs)
Version First Reported In: 4.1.1
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Halla Rempt
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-08-06 07:10 UTC by chris.webb4
Modified: 2021-04-09 13:50 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description chris.webb4 2018-08-06 07:10:24 UTC
Any changes made to a gradient aren't saved.

To reproduce:

Create a new gradient - this will automatically save in the gradients folder
Make any change to that gradient
Check the gradient file - it will remain unchanged

Saving the current document or closing Krita makes no difference. When you re-open Krita the gradient will have reverted to the default yellow-red.
Comment 1 Scott Petrovic 2021-03-11 16:01:53 UTC
I am having a different issues with gradients when doing any updates. If there is any change done, the gradient saves. The problem is that it creates a new "version" of the gradient which isn't managed correctly.

For example if I edit the same gradient 3 times, I will have 3 new gradients appear at the bottom of the gradient chooser. There must be something not being managed correctly with what gradient appears when it has multiple versions.

tested on krita master build with commit 46f87d1e088b2
Comment 2 Halla Rempt 2021-04-09 13:50:13 UTC
Git commit c1d6ed341fa9b62cb83967f673e393faa29f43c3 by Halla Rempt.
Committed on 09/04/2021 at 13:49.
Pushed by rempt into branch 'master'.

Update existing gradients, instead of re-adding them,

M  +8    -2    libs/ui/widgets/kis_gradient_chooser.cc

https://invent.kde.org/graphics/krita/commit/c1d6ed341fa9b62cb83967f673e393faa29f43c3