Update existing gradients, instead of re-adding them,

BUG:397203